dd-1148 fixed layout issue in header when report ready to submit.

--- a/src/AppBundle/Resources/assets/scss/components/_page-header.scss
+++ b/src/AppBundle/Resources/assets/scss/components/_page-header.scss
@@ -16,16 +16,6 @@ header.page-header {
 
     }
     
-    
-    .page-header-titles {
-        
-        @include media(desktop) {
-            float: left;
-        }
-    
-    }
-    
-    
     .report-title {
         font-weight: normal;
         margin-top: 0;
